# Oracore

./: .gitignore  CMakeLists.txt  LICENSE-PROPRIETARY.md  Makefile  README.md  Wiki使用说明.md  api说明文档.md  oracipher_backup.skey  pyproject.toml  requirements-dev.txt  修复报告.md  分析报告.md  改进建议.md  检查报告.md  裸露api说明.md
.github/workflows/: python-package.yml
docs/: PEPPER_GUIDE.md
docs/languages/: README_es_ES.md  README_ja_JP.md  README_ru_RU.md  README_tr_TR.md  README_zh_CN.md  README_zh_TW.md
draft/: 1.md  1.相关报告.md  2.md  2.相关报告.md  api说明.md  readme-1.md  readme-2.md  分析报告-1.md  分析报告-10.md  分析报告-11.md  分析报告-2.md  分析报告-3.md  分析报告-4.md  分析报告-5.md  分析报告-6.md  分析报告-7.md  分析报告-8.md  分析报告-9.md  完整的加密方案.md  提示词-1.md  提示词-2.md  提示词-3.md  提示词-4.md  提示词.md  提示词1.md  提示词2.md  提示词说明-1.md  提示词说明-2.md  提示词说明.md  流程.md  测试方案.md  添加证书加密方案.md  现加密流程分析.md
examples/: basic_usage.py
include/: hsc_kernel.h
languages/: PEPPER_GUIDE.md  README_ar_AR.md  README_es_ES.md  README_ja_JP.md  README_pt_BR.md  README_ru_RU.md  README_tr_TR.md  README_zh_CN.md  README_zh_TW.md
my_oracipher_vault/: safekey.db  salt.key  verification.key
src/: cli.c  hsc_kernel.c  main.c
src/common/: internal_logger.h  secure_memory.c  secure_memory.h  security_spec.h
src/core_crypto/: crypto_client.c  crypto_client.h
src/oracipher/: _internal_db.py  _internal_migration.py  crypto.py  data_formats.py  vault.py
src/oracipher/importers/: __init__.py  google_chrome.py  samsung_pass.py
src/oracore/: __init__.py  _internal_db.py  crypto.py  data_formats.py  exceptions.py  vault.py
src/oracore/importers/: __init__.py  base.py  google_chrome.py  samsung_pass.py
src/pki/: pki_handler.c  pki_handler.h
tests/: test_api_integration.c  test_asymmetric_crypto.c  test_ca_util.c  test_core_crypto.c  test_crypto.py  test_data_manager.py  test_expert_api.c  test_helpers.c  test_helpers.h  test_kdf.c  test_pki_handler.c  test_pki_lifecycle.c  test_pki_verification.c  test_symmetric_crypto.c  test_vault.py
