# ==============================================================================
# CMakeLists.txt for Oracipher Core
#
# Reviewed and Updated by the Oracipher Core Code Review Committee
# Version: 3.1 (Remediation: Fixed Linker Dependencies for Windows Security Features)
#
# This file now integrates clang-tidy directly into the build process,
# enforces strict dependency version checks, and prevents test utilities
# from being installed by default.
# ==============================================================================

# --- 1. Project Definition and C Standard ---
cmake_minimum_required(VERSION 3.12)
project(OracipherCore VERSION 1.0 LANGUAGES C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

# [COMMITTEE CONFIG] New option to control the installation of development tools.
# Defaults to OFF to ensure test_ca_util is not deployed to production.
option(INSTALL_DEV_TOOLS "Install development and testing tools (like test_ca_util)" OFF)

# --- 2. Compiler Settings and Warnings ---
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_CLANG)
    add_compile_options(-Wall -Wextra -Werror)
endif()

# [COMMITTEE FIX] Platform-specific compile definitions and security hardening.
if(WIN32)
    add_compile_options(-DWIN32_LEAN_AND_MEAN -DNOCRYPT)
    
    # [FIX]: Audit Finding [Build] - Windows Security Hardening
    if(MSVC)
        # 1. Control Flow Guard (CFG)
        # 防御内存破坏漏洞（如 vtable 劫持）
        add_compile_options(/guard:cf)
        add_link_options(/GUARD:CF /DYNAMICBASE /NXCOMPAT /HIGHENTROPYVA)

        # 2. Spectre Mitigation
        # [FIX]: 新增 /Qspectre 以缓解推测执行侧信道攻击 (Spectre Variant 1)
        add_compile_options(/Qspectre)
    endif()
endif()

# [COMMITTEE FIX] Integrate clang-tidy for static analysis.
find_program(CLANG_TIDY clang-tidy)
if(CLANG_TIDY)
    # Set the command to run clang-tidy for C files. The -p flag tells
    # clang-tidy where to find the compilation database (generated by CMake).
    set(CMAKE_C_CLANG_TIDY ${CLANG_TIDY} -p=${CMAKE_BINARY_DIR})
    message(STATUS "Found clang-tidy, static analysis is ENABLED.")
else()
    message(STATUS "clang-tidy not found. Static analysis will be SKIPPED.")
endif()

# --- 3. Dependency Discovery and Validation (pkg-config) ---
find_package(PkgConfig REQUIRED)
pkg_check_modules(SODIUM REQUIRED libsodium)
pkg_check_modules(OPENSSL REQUIRED openssl)
pkg_check_modules(CURL REQUIRED libcurl)

message(STATUS "Found Libsodium via pkg-config (Version: ${SODIUM_VERSION})")
message(STATUS "Found OpenSSL via pkg-config (Version: ${OPENSSL_VERSION})")
message(STATUS "Found Libcurl via pkg-config (Version: ${CURL_VERSION})")

# Enhanced Security Validation for Dependencies
if(NOT OPENSSL_VERSION VERSION_GREATER_EQUAL "3.0.0")
    message(FATAL_ERROR "
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!! BUILD FAILED: Dependency requirement not met.
!! Required OpenSSL version: >= 3.0.0
!! Detected version:       ${OPENSSL_VERSION}
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!")
endif()

if(NOT OPENSSL_VERSION VERSION_GREATER_EQUAL "3.0.7")
    message(WARNING "
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!! SECURITY WARNING: Your OpenSSL version (${OPENSSL_VERSION}) is older than 3.0.7
!! and may be vulnerable to CVE-2022-3786 and CVE-2022-3602.
!! It is STRONGLY recommended to upgrade your OpenSSL library.
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!")
endif()

# [COMMITTEE FIX] Upgraded to FATAL_ERROR per Review Report Priority #1
# This strictly prevents building with Libcurl versions vulnerable to
# the critical SOCKS5 heap overflow (CVE-2023-38545).
if(NOT CURL_VERSION VERSION_GREATER_EQUAL "8.4.0")
    message(FATAL_ERROR "
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!! SECURITY FAILURE: BUILD TERMINATED
!!
!! Your Libcurl version (${CURL_VERSION}) is older than 8.4.0.
!! It contains a known CRITICAL vulnerability:
!! SOCKS5 heap overflow (CVE-2023-38545).
!!
!! Oracipher Core security policy strictly forbids building against
!! vulnerable dependencies.
!!
!! ACTION REQUIRED: Upgrade Libcurl to version 8.4.0 or newer.
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!")
endif()

message(STATUS "Dependency version checks passed.")

# --- 4. Define the Core Shared Library (`hsc_kernel`) ---
file(GLOB_RECURSE KERNEL_SRCS
    "src/common/*.c"
    "src/core_crypto/*.c"
    "src/pki/*.c"
    "src/hsc_kernel.c"
)
add_library(hsc_kernel SHARED ${KERNEL_SRCS})

set(INTERNAL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

target_include_directories(hsc_kernel PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)
target_include_directories(hsc_kernel PRIVATE
    ${INTERNAL_INCLUDE_DIR}
    ${SODIUM_INCLUDE_DIRS}
    ${OPENSSL_INCLUDE_DIRS}
    ${CURL_INCLUDE_DIRS}
)
target_link_libraries(hsc_kernel PUBLIC
    ${SODIUM_LIBRARIES}
    ${OPENSSL_LIBRARIES}
    ${CURL_LIBRARIES}
)

# [FIX]: 修复 Windows 下链接错误
# 1. ws2_32: 用于 pki_handler.c 的 Socket SSRF 防御 (getaddrinfo, socket 等)
# 2. Advapi32: 用于 hsc_kernel.c 的安全描述符函数 (ConvertStringSecurityDescriptorToSecurityDescriptorA)
# 3. Kernel32: 默认包含，用于 SetProcessMitigationPolicy (P1阶段)
if(WIN32)
    target_link_libraries(hsc_kernel PRIVATE ws2_32 Advapi32)
endif()

# --- 5. Define Executable Targets ---
add_executable(hsc_cli src/cli.c)
target_link_libraries(hsc_cli PRIVATE hsc_kernel)

add_executable(hsc_demo src/main.c)
target_link_libraries(hsc_demo PRIVATE hsc_kernel)

add_executable(test_ca_util tests/test_ca_util.c)
target_include_directories(test_ca_util PRIVATE
    ${INTERNAL_INCLUDE_DIR}
    ${SODIUM_INCLUDE_DIRS}
    ${OPENSSL_INCLUDE_DIRS}
    ${CURL_INCLUDE_DIRS}
)
target_link_libraries(test_ca_util PRIVATE
    ${SODIUM_LIBRARIES}
    ${OPENSSL_LIBRARIES}
    ${CURL_LIBRARIES}
)

# [FIX]: Windows 下 test_ca_util 也可能间接依赖 socket 符号，安全起见也加上
if(WIN32)
    target_link_libraries(test_ca_util PRIVATE ws2_32 Advapi32)
endif()

# --- 6. Define Test Suite ---
enable_testing()
include(CTest)
file(GLOB TEST_HELPER_SRCS "tests/test_helpers.c")
file(GLOB TEST_MAIN_SRCS "tests/test_*.c")
list(REMOVE_ITEM TEST_MAIN_SRCS
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/test_helpers.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/tests/test_ca_util.c"
)

foreach(test_source ${TEST_MAIN_SRCS})
    get_filename_component(test_name ${test_source} NAME_WE)
    add_executable(${test_name} ${test_source} ${TEST_HELPER_SRCS})
    
    target_include_directories(${test_name} PRIVATE ${INTERNAL_INCLUDE_DIR})
    
    target_link_libraries(${test_name} PRIVATE hsc_kernel)
    
    # [FIX]: Windows 链接修复
    if(WIN32)
        target_link_libraries(${test_name} PRIVATE ws2_32 Advapi32)
    endif()
    
    add_test(NAME ${test_name} COMMAND ${test_name})
    set_tests_properties(${test_name} PROPERTIES
        ENVIRONMENT "HSC_PEPPER_HEX=00112233445566778899aabbccddeeff00112233445566778899aabbccddeeff"
    )
endforeach()

# --- 7. Installation and RPATH Rules ---
message(STATUS "Configuring installation rules...")
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH "$ORIGIN")
if(APPLE)
  set(CMAKE_INSTALL_RPATH "@loader_path")
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# [COMMITTEE FIX] Production artifacts: Always install these
install(TARGETS hsc_kernel hsc_cli hsc_demo
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)
install(FILES include/hsc_kernel.h DESTINATION include)

# [COMMITTEE FIX] Development artifacts: Only install if requested
# This prevents 'test_ca_util' from polluting production environments.
if(INSTALL_DEV_TOOLS)
    message(STATUS "NOTE: Development tools (test_ca_util) WILL be installed.")
    install(TARGETS test_ca_util
        RUNTIME DESTINATION bin
    )
else()
    message(STATUS "NOTE: Development tools (test_ca_util) will NOT be installed. (Use -DINSTALL_DEV_TOOLS=ON to enable)")
endif()

# --- 8. Optional Developer Tools Integration ---
find_program(CLANG_FORMAT clang-format)
if(CLANG_FORMAT)
    message(STATUS "Found clang-format: ${CLANG_FORMAT}")
    file(GLOB_RECURSE ALL_CODE_FILES
        "src/*.c" "src/*.h" "include/*.h" "tests/*.c" "tests/*.h"
    )
    add_custom_target(format
        COMMAND ${CLANG_FORMAT} -i ${ALL_CODE_FILES}
        COMMENT "Formatting all source and header files with clang-format..."
    )
else()
    message(STATUS "clang-format not found. The 'format' target will not be available.")
endif()

message(STATUS "CMake configuration complete. You can now build with 'cmake --build .'")
message(STATUS "Run tests with 'ctest'.")
message(STATUS "Run code formatter with 'cmake --build . --target format'.")