# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oracipher"
version = "1.0.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A robust, standalone library for handling password vault encryption, database management, and data format conversions."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE.txt" }
keywords = ["encryption", "security", "password-manager", "argon2", "fernet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
]

# [修改] 移除了 "pycryptodome"
dependencies = [
    "cryptography>=41.0.0",
    "argon2-cffi>=21.3.0"
]

[project.urls]
Homepage = "https://github.com/EldricArlo/OraciCore.git"
"Bug Tracker" = "https://github.com/EldricArlo/OraciCore.git/issues"

[project.optional-dependencies]
ui-extras = [
    "PyQt6>=6.5.0",
    "requests>=2.30.0"
]
dev = [
    "pytest",
    "ruff",
    "mypy"
]